app/src/main/java/com/example/studymatetwo/error/MainResponse.kt
package com.example.studymatetwo.error

data class MainResponse(
    val status: String,
    val message: String
)